# media-studio

./: .env.example  .gitattributes  .gitignore  ADDITIONAL_TERMS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE.md  Start Media Studio.command  Stop Media Studio.command  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py  codex_local_provider.py  control_auth.py  db.py  db_admin.py  db_backup.py  enhancement_provider.py  external_llm_usage.py  kie_adapter.py  main.py  model_support.py  pricing.py  queue_limits.py  runner.py  schemas.py  service.py  service_preset_validation.py  service_prompt_recipe_validation.py  service_provider_config.py  service_reference_media.py  settings.py  store.py  store_assistant.py  store_graph.py  store_llm_usage.py  store_reference_media.py  store_schema.py  store_seed_presets.py  store_seed_prompt_recipes.py  store_support.py
apps/api/media_studio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_api_media_assets.py  test_api_smoke.py  test_batch_status.py  test_character_sheet_recipe.py  test_db_admin.py  test_enhancement_provider.py  test_graph_presets.py  test_graph_seedance.py  test_graph_studio.py  test_graph_studio_image_utils.py  test_media_assistant.py  test_media_assistant_prompt_assets.py  test_model_support.py  test_projects.py  test_reference_media.py  test_seedance_service.py  test_settings.py  test_store_schema_migrations.py  test_store_seed_data.py  test_store_support.py  test_validation_bundle_source_asset.py
content/: README.md
(+741 files in other folders)
